[metadata]
description-file = README.md

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./clana --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --cov-report term --flake8 --ignore=docs/ --durations=3 --black
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
convention=numpy
match_dir = clana

[flake8]
match_dir = clana
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501

[mutmut]
backup=False
runner=python3 -m pytest
tests_dir=tests/
