[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = clana

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.4.0

description = CLANA is a toolkit for classifier analysis.
long_description = file: README.md
long_description_content_type = text/markdown

platforms = Linux

url = https://github.com/MartinThoma/clana
download_url = https://github.com/MartinThoma/clana

license = MIT

keywords =
    Machine Learning
    Data Science
    classifiers
    Classification
    Classifier Analysis

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Utilities

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    click>=6.7
    jinja2
    matplotlib>=2.1.1
    numpy>=1.14.0
    PyYAML>=5.1.1
    scikit-learn>=0.19.1
    scipy>=1.0.0

[options.entry_points]
console_scripts =
    clana = clana.cli:entry_point

[files]
package-data = clana = clana/config.yaml

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./clana --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --ignore=clana/__main__.py --durations=3 --timeout=30
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
match_dir = clana
ignore = D105, D413, D107, D416, D212, D203, D417

[flake8]
match_dir = clana
max-line-length = 80
exclude = tests/*,.tox/*,.nox/*,docs/*,build/*
ignore = E501

[mutmut]
backup = False
runner = python -m pytest
tests_dir = tests/

[bandit]
ignore = B311  # See https://github.com/PyCQA/bandit/issues/212

[mypy]
ignore_missing_imports=true
check_untyped_defs=true
disallow_untyped_defs=true
disallow_any_generics=true
warn_unused_ignores=true
strict_optional=true
python_version=3.8
warn_redundant_casts=true
warn_unused_configs=true
disallow_untyped_calls=true
disallow_incomplete_defs=true
follow_imports=skip

[mypy-tests.*]
ignore_errors = True
